--- a/MuseDash.Mod.Template.csproj
+++ b/MuseDash.Mod.Template.csproj
@@ -26,6 +26,8 @@
 
     <ItemGroup>
         <Compile Include="MuseDashModTemplate\AssemblyInfo.cs"/>
+        <Compile Include="MuseDashModTemplate\Data.cs"/>
+        <Compile Include="MuseDashModTemplate\GlobalUsings.cs"/>
         <None Include="icon.png" Pack="true" PackagePath="\"/>
         <None Include="README.md" Pack="true" PackagePath="\"/>
         <Content Include="MuseDashModTemplate\**\*" Exclude="MuseDashModTemplate\**\bin\**;MuseDashModTemplate\**\obj\**;MuseDashModTemplate\**\.idea\**"/>
