--- a/MuseDashModTemplate/MuseDashModTemplate.csproj
+++ b/MuseDashModTemplate/MuseDashModTemplate.csproj
@@ -5,15 +5,109 @@
         <RootNamespace>MuseDashModTemplate</RootNamespace>
         <AssemblyName>MuseDashModTemplate</AssemblyName>
         <TargetFramework>net6.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
-	    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <ItemGroup>
         <None Remove="SetPath.cmd"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="0Harmony">
+            <HintPath>$(MelonNET6)\0Harmony.dll</HintPath>
+        </Reference>
+        <Reference Include="Assembly-CSharp">
+            <HintPath>$(MelonAssemblies)\Assembly-CSharp.dll</HintPath>
+        </Reference>
+        <Reference Include="Assembly-CSharp-firstpass">
+            <HintPath>$(MelonAssemblies)\Assembly-CSharp-firstpass.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroString">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroString.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppGoogle.Protobuf">
+            <HintPath>$(MelonAssemblies)\Il2CppGoogle.Protobuf.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2Cppmscorlib">
+            <HintPath>$(MelonAssemblies)\Il2Cppmscorlib.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppNewtonsoft.Json">
+            <HintPath>$(MelonAssemblies)\Il2CppNewtonsoft.Json.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem.Core">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.Core.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppInterop.Common">
+            <HintPath>$(MelonNET6)\Il2CppInterop.Common.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppInterop.Generator">
+            <HintPath>$(MelonNET6)\Il2CppInterop.Generator.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppInterop.Runtime">
+            <HintPath>$(MelonNET6)\Il2CppInterop.Runtime.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppNAudio">
+            <HintPath>$(MelonAssemblies)\Il2CppNAudio.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroTools2">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroTools2.Resources">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.Resources.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroTools2.Account">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.Account.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSirenix.Serialization">
+            <HintPath>$(MelonAssemblies)\Il2CppSirenix.Serialization.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem.Runtime.InteropServices">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.Runtime.InteropServices.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2Cppspine-unity">
+            <HintPath>$(MelonAssemblies)\Il2Cppspine-unity.dll</HintPath>
+        </Reference>
+        <Reference Include="MelonLoader">
+            <HintPath>$(MelonNET6)\MelonLoader.dll</HintPath>
+        </Reference>
+        <Reference Include="Tomlet">
+            <HintPath>$(MelonNet6)\Tomlet.dll</HintPath>
+        </Reference>
+        <Reference Include="Unity.Addressables">
+            <HintPath>$(MelonAssemblies)\Unity.Addressables.dll</HintPath>
+        </Reference>
+        <Reference Include="Unity.ResourceManager">
+            <HintPath>$(MelonAssemblies)\Unity.ResourceManager.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AudioModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.AudioModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.ImageConversionModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.ImageConversionModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.AnimationModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.AnimationModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.CoreModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.CoreModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.UnityWebRequestModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.UnityWebRequestModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.UI">
+            <HintPath>$(MelonAssemblies)\UnityEngine.UI.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppDOTween">
+            <HintPath>$(MelonAssemblies)\Il2CppDOTween.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2Cppspine-unity">
+            <HintPath>$(MelonAssemblies)\Il2Cppspine-unity.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
     <Target Name="CopyToModsFolder" AfterTargets="Build">
