--- a/MuseDashModTemplate/MuseDashModTemplate.csproj
+++ b/MuseDashModTemplate/MuseDashModTemplate.csproj
@@ -24,23 +24,11 @@
         <Reference Include="Assembly-CSharp-firstpass">
             <HintPath>$(MelonAssemblies)\Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
-        <Reference Include="Il2CppPeroString">
-            <HintPath>$(MelonAssemblies)\Il2CppPeroString.dll</HintPath>
+        <Reference Include="Il2CppDOTween">
+            <HintPath>$(MelonAssemblies)\Il2CppDOTween.dll</HintPath>
         </Reference>
         <Reference Include="Il2CppGoogle.Protobuf">
             <HintPath>$(MelonAssemblies)\Il2CppGoogle.Protobuf.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2Cppmscorlib">
-            <HintPath>$(MelonAssemblies)\Il2Cppmscorlib.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2CppNewtonsoft.Json">
-            <HintPath>$(MelonAssemblies)\Il2CppNewtonsoft.Json.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2CppSystem">
-            <HintPath>$(MelonAssemblies)\Il2CppSystem.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2CppSystem.Core">
-            <HintPath>$(MelonAssemblies)\Il2CppSystem.Core.dll</HintPath>
         </Reference>
         <Reference Include="Il2CppInterop.Common">
             <HintPath>$(MelonNET6)\Il2CppInterop.Common.dll</HintPath>
@@ -51,26 +39,41 @@
         <Reference Include="Il2CppInterop.Runtime">
             <HintPath>$(MelonNET6)\Il2CppInterop.Runtime.dll</HintPath>
         </Reference>
+        <Reference Include="Il2Cppmscorlib">
+            <HintPath>$(MelonAssemblies)\Il2Cppmscorlib.dll</HintPath>
+        </Reference>
         <Reference Include="Il2CppNAudio">
             <HintPath>$(MelonAssemblies)\Il2CppNAudio.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppNewtonsoft.Json">
+            <HintPath>$(MelonAssemblies)\Il2CppNewtonsoft.Json.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroString">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroString.dll</HintPath>
         </Reference>
         <Reference Include="Il2CppPeroTools2">
             <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.dll</HintPath>
         </Reference>
-        <Reference Include="Il2CppPeroTools2.Resources">
-            <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.Resources.dll</HintPath>
-        </Reference>
         <Reference Include="Il2CppPeroTools2.Account">
             <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.Account.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppPeroTools2.Resources">
+            <HintPath>$(MelonAssemblies)\Il2CppPeroTools2.Resources.dll</HintPath>
         </Reference>
         <Reference Include="Il2CppSirenix.Serialization">
             <HintPath>$(MelonAssemblies)\Il2CppSirenix.Serialization.dll</HintPath>
         </Reference>
-        <Reference Include="Il2CppSystem.Runtime.InteropServices">
-            <HintPath>$(MelonAssemblies)\Il2CppSystem.Runtime.InteropServices.dll</HintPath>
-        </Reference>
         <Reference Include="Il2Cppspine-unity">
             <HintPath>$(MelonAssemblies)\Il2Cppspine-unity.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem.Core">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.Core.dll</HintPath>
+        </Reference>
+        <Reference Include="Il2CppSystem.Runtime.InteropServices">
+            <HintPath>$(MelonAssemblies)\Il2CppSystem.Runtime.InteropServices.dll</HintPath>
         </Reference>
         <Reference Include="MelonLoader">
             <HintPath>$(MelonNET6)\MelonLoader.dll</HintPath>
@@ -84,17 +87,23 @@
         <Reference Include="Unity.ResourceManager">
             <HintPath>$(MelonAssemblies)\Unity.ResourceManager.dll</HintPath>
         </Reference>
+        <Reference Include="UnityEngine.AnimationModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.AnimationModule.dll</HintPath>
+        </Reference>
         <Reference Include="UnityEngine.AudioModule">
             <HintPath>$(MelonAssemblies)\UnityEngine.AudioModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.CoreModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.ImageConversionModule">
             <HintPath>$(MelonAssemblies)\UnityEngine.ImageConversionModule.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEngine.AnimationModule">
-            <HintPath>$(MelonAssemblies)\UnityEngine.AnimationModule.dll</HintPath>
+        <Reference Include="UnityEngine.InputLegacyModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.InputLegacyModule.dll</HintPath>
         </Reference>
-        <Reference Include="UnityEngine.CoreModule">
-            <HintPath>$(MelonAssemblies)\UnityEngine.CoreModule.dll</HintPath>
+        <Reference Include="UnityEngine.TextRenderingModule">
+            <HintPath>$(MelonAssemblies)\UnityEngine.TextRenderingModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UnityWebRequestModule">
             <HintPath>$(MelonAssemblies)\UnityEngine.UnityWebRequestModule.dll</HintPath>
@@ -104,12 +113,6 @@
         </Reference>
         <Reference Include="UnityEngine.UIModule">
             <HintPath>$(MelonAssemblies)\UnityEngine.UIModule.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2CppDOTween">
-            <HintPath>$(MelonAssemblies)\Il2CppDOTween.dll</HintPath>
-        </Reference>
-        <Reference Include="Il2Cppspine-unity">
-            <HintPath>$(MelonAssemblies)\Il2Cppspine-unity.dll</HintPath>
         </Reference>
     </ItemGroup>
 
