--- a/MuseDashModTemplate/MuseDashModTemplate.csproj
+++ b/MuseDashModTemplate/MuseDashModTemplate.csproj
@@ -116,34 +116,12 @@
         </Reference>
     </ItemGroup>
 
-    <!--#if (MuseDashMirror) -->
+    <!--#if (UseMuseDashMirror || UseILRepack || UseUniTask) -->
     <ItemGroup>
-        <PackageReference Include="MuseDashMirror" Version="3.0.2"/>
+        <PackageReference Condition="'$(UseMuseDashMirror)' == 'true'" Include="MuseDashMirror" Version="3.0.2"/>
+        <PackageReference Condition="'$(UseILRepack)' == 'true'" Include="ILRepack.Lib.MSBuild.Task" Version="2.0.26"/>
+        <PackageReference Condition="'$(UseUniTask)' == 'true'" Include="UniTask" Version="2.5.3"/>
     </ItemGroup>
-    <!--#endif -->
-    
-    <!--#if (ILRepack) -->
-    <ItemGroup>
-        <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.26"/>
-    </ItemGroup>
-
-    <Target Name="ILRepacker" AfterTargets="Build" Condition=" '$(Configuration)' == 'Debug' ">
-        <PropertyGroup>
-            <WorkingDirectory>$(OutputPath)</WorkingDirectory>
-        </PropertyGroup>
-        <ItemGroup>
-            <InputAssemblies Include="$(OutputPath)\$(AssemblyName).dll"/>
-            <IlRepackLibs Include="$(OutputPath)"/>
-            <IlRepackLibs Include="$(MelonNET6)"/>
-        </ItemGroup>
-        <ILRepack
-                Internalize="true"
-                LibraryPath="@(IlRepackLibs)"
-                OutputFile="$(OutputPath)\$(AssemblyName).dll"
-                InputAssemblies="@(InputAssemblies)"
-                TargetKind="Dll"
-                Parallel="true"/>
-    </Target>
     <!--#endif -->
 
     <Target Name="CopyToModsFolder" AfterTargets="Build">
