--- a/MuseDash.Mod.Template.csproj
+++ b/MuseDash.Mod.Template.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <PackageType>Template</PackageType>
-        <PackageVersion>1.0.1</PackageVersion>
+        <PackageVersion>1.0.2</PackageVersion>
         <PackageId>MuseDash.Mod.Template</PackageId>
         <Title>MuseDash Mod Template</Title>
         <Authors>lxy</Authors>
@@ -21,6 +21,7 @@
         <LangVersion>latest</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <RootNamespace>templatepack</RootNamespace>
+        <OutputPath>$(SolutionDir)\bin</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
